package com.barelyconscious.entities.items

enum class ItemRarity {
    COMMON,
    UNCOMMON,
    RARE,
    EPIC,
    UNIQUE,
}
