package com.barelyconscious.worlds.game.item;

public interface ItemTag {

    String getTagName();
}
